[tool.poetry]
name = "cubs"
version = "0.1.0"
description = "Python Data Science Experiments"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
